--- a/css/style.css
+++ b/css/style.css
@@ -50,10 +50,11 @@ input:focus {
     border: 0;
     background-color: #E7E7E7;
 }
-.ingredients-selection, .appliances-selection, .ustensils-selection {    
-     width: 170px;
-     height: 70px;     
-     margin-left: 15px;
+.ingredients-selection, .appliances-selection, .ustensils-selection {   
+  
+    width: 170px;
+    height: 70px;     
+    margin-left: 15px;
  }
 .ingredients-dropdown-close,
 .appliances-dropdown-close,
@@ -268,6 +269,15 @@ input:focus {
 }
 .card-deck {
    margin-top: 25px;
+}
+.empty-recipe {
+    display: none;
+    text-align: center;   
+}
+.empty-recipe p {  
+   font-size: 24px;
+    margin: auto;
+    max-width: 700px;
 }
 .image-card {
     width: 380px;
